# template-python

./: .gitignore  .prettierignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.github/workflows-ytt/: ci.yml
src/: add.py
tests/: plugin_debugpy.py  test_add.py
