#
# Poetry
#

[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Hiroshi Ogawa <hi.ogawa.zz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pylint = "^2.11.1"
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#
# Tools
#

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["C", "R", "fixme"]

[tool.mypy]
strict = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = [
  "--cov-report=term",
  "--cov-report=html",
]
filterwarnings = ["error"]
